--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,3 +8,10 @@ archer:
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
 
+<% 30.times do |n| %>
+user_<%= n %>:
+  name: <%= "User-#{n}" %>
+  email: <%= "user-#{n}@fakee.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
+
