--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,6 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+orange:
   content: MyText
   user: one
 
