--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -10,6 +10,16 @@ tau_manifesto:
   created_at: <%= 3.years.ago %>
   user: micahel
 
+ants:
+  content: "Oh, is that what you want? Because that's how you get ants!"
+  created_at: <%= 2.years.ago %>
+  user: archer
+
+zone:
+  content: "Danger zone!"
+  created_at: <%= 3.days.ago %>
+  user: archer
+
 cat_video:
   content: "Sad cats are sad: http://youtu.be/PKffm2uI4dk"
   created_at: <%= 2.hours.ago %>
