--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -20,6 +20,13 @@ lana:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+malory:
+  name: Malory Archer
+  email: malory@example.gov
+  password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
+
 anon:
   name: not active
   email: anon@example.gov
