--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -3,12 +3,12 @@
 orange:
   content: "I just ate an orange"
   created_at: <%= 10.minutes.ago %>
-  user: micahel
+  user: michael
 
 tau_manifesto:
   content: "Check out the @tauday site by @mhartl: http://tauday.com"
   created_at: <%= 3.years.ago %>
-  user: micahel
+  user: michael
 
 ants:
   content: "Oh, is that what you want? Because that's how you get ants!"
@@ -20,20 +20,25 @@ zone:
   created_at: <%= 3.days.ago %>
   user: archer
 
+not:
+  content: "not now archer"
+  created_at: <%= 3.days.ago %>
+  user: lana
+
 cat_video:
   content: "Sad cats are sad: http://youtu.be/PKffm2uI4dk"
   created_at: <%= 2.hours.ago %>
-  user: micahel
+  user: michael
 
 most_recent:
   content: "Writing a short test"
   created_at: <%= Time.zone.now %>
-  user: micahel
+  user: michael
 
 <% 30.times do |n| %>
 micropost_<%= n %>:
   content: <%= Faker::Lorem.sentences(5) %>
   created_at: <%= 42.days.ago %>
-  user: micahel
+  user: michael
 <% end %>
 
